--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ torchvision = "^0.13"
 scikit-learn = "^1.1.3"
 opencv-contrib-python = "^4.7.0.68"
 opencv-python = "^4.6.0.66"
+datasets = {extras = ["vision"], version = "^2.9.0"}
+tqdm = "^4.64.1"
+segmentation-models-pytorch = "^0.3.2"
+mit-semseg = "^1.0.0"
 
 [tool.poe.tasks]
 force-cuda113 = "python -m pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
@@ -26,6 +30,8 @@ ipdb = "^0.13"
 wandb = "^0.13.5"
 matplotlib = "^3.6.2"
 poethepoet = "^0.16.4"
+ipywidgets = "^8.0.4"
+jupyterlab = "^3.6.1"
 
 
 [tool.poetry.group.lint.dependencies]
